Place ul in a div of id 'container'

--- a/Tribute-Page/index.html
+++ b/Tribute-Page/index.html
@@ -16,7 +16,8 @@
       </div>
       <div id="timeline">
         <p>Here is a timeline of Lionel Messi's life:</p>
-        <ul>
+        <div id="container">
+          <ul>
             <li><span class="bold">24th June 1987:</span>Lionel Andres Messi Cuccittini was born on Wednesday, June 24, 1987. He was born in Rosario, Argentina.</li>
             <li><span class="bold">31st March 1994:</span>At the age of six, Messi became a member of the Old Boys. He played for this team for about six years. While he was at the youth club, he scored over 500 goals. The team was almost unbeatable.</li>
             <li><span class="bold">2nd February 2001:</span>Messi and his family relocated to the city of Barcelona in Spain in February 2001. The family moved into an apartment that was very close to Barcelona's football team's stadium, Camp Nou.</li>
@@ -39,7 +40,8 @@
             <li><span class="bold">11th July 2021:</span>Messi leads Argentina to their first Copa America title since 1993.</li>
             <li><span class="bold">10th August 2021:</span>Messi completes a free transfer to Paris Saint Germain after his contract at Barcelona ran out.</li>
             <li><span class="bold">18th December 2022:</span>Lionel Messi's career is complete. The 35-year-old Argentine led his country, as Diego Maradona did in 1986, to the world title. After extension, it was 3-3 and after penalty kicks, Argentina won.</li>
-        </ul>
+          </ul>
+        </div>
       </div>
       <div id="footnote">If you have time, read more about the greatest to ever kick a football on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Lionel_Messi" target="_blank">Wikipedia entry</a>.
     </main>
