Add quote after ul

--- a/Tribute-Page/index.html
+++ b/Tribute-Page/index.html
@@ -42,6 +42,10 @@
             <li><span class="bold">18th December 2022:</span>Lionel Messi's career is complete. The 35-year-old Argentine led his country, as Diego Maradona did in 1986, to the world title. After extension, it was 3-3 and after penalty kicks, Argentina won.</li>
           </ul>
         </div>
+        <div id="quote">
+            <p>"Messi will be the player to win the most Ballons d'Or in history. He will win five, six, seven. He is incomparable. He's in a different league."</p>
+            <p id="author">~ Johan Cruyff</p>
+        </div>
       </div>
       <div id="footnote">If you have time, read more about the greatest to ever kick a football on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Lionel_Messi" target="_blank">Wikipedia entry</a>.
     </main>
